@@ -1,3 +1,9 @@
+2015-10-29  Ola Jeppsson  <ola@adapteva.com>
+
+	* epiphany.c (epiphany_atomic_load): Add empty function.
+	(epiphany_atomic_store): Likewise.
+	* epiphany-sim.h: Add function prototypes for above.
+
 2015-10-28  Ola Jeppsson  <ola@adapteva.com>
 
 	* epiphany-elf-sim.py.in: Fix path handling.
